--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -12,6 +12,15 @@
 			<label>Titulo</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Titulo da notícia"/>
 			<br />
+			<label>Resumo</label>
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da notícia"/>
+			<br />
+			<label>Nome do Autor</label>
+			<input type="text" id="autor" name="autor" placeholder="Autor da notícia"/>
+			<br />
+			<label>Data dos Fatos</label>
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da notícia"/>
+			<br />
 			<label>Notícia</label>
 			 <textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
 			 <br />
